Se agrego un parrafo saludando

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       varios. La comunicación entre el repositorio local y los remotos se realiza mediante los comandos push(enviar) y
       pull(descargar).</li>
   </ul>
+  <p>Hola a todos :D</p>
 
 </body>
 
